# bookstore

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
bookStore/: settings.py  urls.py
order/: urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
